@@ -21,6 +21,9 @@ sinclude(sanitize.m4)
 # This gets GDB_AC_SELFTEST.
 sinclude(selftest.m4)
 
+# This gets AM_GDB_CXX_DEBUG.
+sinclude(cxx-debug.m4)
+
 dnl gdb/configure.in uses BFD_NEED_DECLARATION, so get its definition.
 sinclude(../bfd/bfd.m4)
 
