@@ -155,6 +155,7 @@ AC_SUBST(ustlibs)
 AC_SUBST(ustinc)
 
 AM_GDB_WARNINGS
+AM_GDB_CXX_DEBUG
 
 dnl dladdr is glibc-specific.  It is used by thread-db.c but only for
 dnl debugging messages.  It lives in -ldl which is handled below so we don't
