@@ -1,3 +1,9 @@
+2018-07-31  Tom Tromey  <tom@tromey.com>
+
+	* configure.ac: Use AM_GDB_CXX_DEBUG.
+	* config.in, configure: Rebuild.
+	* acinclude.m4: Include ../cxx-debug.m4.
+
 2019-01-01  Joel Brobecker  <brobecker@adacore.com>
 
 	* gdbreplay.c (gdbreplay_version): Update copyright year in
